<resources>
    <string name="app_name">Marmot Express</string>
    <string-array name="array_name">
        <item>Kurier</item>
        <item>Magazynier</item>
        <item>Koordynator</item>
        <item>Manager</item>
    </string-array>
    <string name="save_rate">Zapisz zmiany</string>
    <string name="ok">Ok</string>
    <string name="cancel">Anuluj</string>
    <string name="adres">Adres</string>
    <string name="nr_dowodu">Nr dowodu</string>
    <string name="stanowisko">Stanowisko</string>
    <string name="reset_password">Zresetuj Hasło</string>
    <string name="email">Email</string>
    <string name="kod_pocztowy">Kod pocztowy</string>
    <string name="pesel">Pesel</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="remove_account">Usuń Konto</string>
    <string name="imie">Imię</string>
    <string name="editdetails">Edytuj Dane</string>
    <string name="user_list">Lista Pracowników</string>
    <string name="add_user">Dodaj Pracownika</string>
    <string name="salary">Pensja</string>
    <string name="rate">Stawka</string>
    <string name="hours_count">Ilość godzin</string>
    <string name="how_to_salary">Notka: Pensja = ilość godzin * stawka</string>
    <string name="edit_rate">Edytuj stawkę</string>
    <string name="schedule">Grafik</string>
    <string name="parcel_list">Lista paczek</string>
    <string name="my_account">Moje konto</string>
    <string name="hintEmail"><b>EMAIL</b></string>
    <string name="hintPass"><b>HASŁO</b></string>
    <string name="hintNewPass"><b>NOWE HASŁO</b></string>
    <string name="hintOldPass"><b>STARE HASŁO</b></string>
    <string name="hintConfPass"><b>POTWIERDŹ HASŁO</b></string>
    <string name="buttonChangeStatus">Ustaw Status</string>
    <string name="day_name">Dzień Tygodnia</string>
    <string name="no_data">Brak Danych</string>
    <string name="week">Tydzień</string>
    <string name="edit_schedule">Edytuj grafik</string>
    <string name="check_availability">Sprawdź dostępność</string>
    <string name="availability">Dostępność</string>
    <string name="check_schedule">Sprawdź grafik</string>
    <string name="present">Jestem!</string>
    <string name="absent">Wychodzę!</string>
    <string name="presence_is_set">Obecność już dodana</string>
    <string name="not_working">Dziś nie pracujesz</string>
    <string name="buttonRemoveParcel">Usuń Paczkę</string>
    <string name="edit_availability">Edytuj Dostępność</string>
    <string name="set_previous">Ustaw poprzedni</string>
</resources>
