<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manager.ManagerActivity">

    <Button
        android:id="@+id/buttonUserList"
        style="@style/buttonGreen"
        android:layout_marginBottom="8dp"
        android:text="@string/user_list"
        app:layout_constraintBottom_toTopOf="@+id/buttonManagerAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonManagerAccount"
        style="@style/buttonGreen"
        android:layout_marginBottom="40dp"
        android:text="@string/my_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        style="@style/headerBackgroundGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogoutManag"
        style="@style/buttonGreen"
        android:layout_marginStart="164dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="159dp"
        android:text="Wyloguj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Button
        android:id="@+id/buttonPresence"
        style="@style/buttonGreen"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/present"
        app:layout_constraintBottom_toTopOf="@+id/buttonUserList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/headerWhite"
        android:layout_marginStart="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="110dp"
        android:text="Menadżer"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_MAIN_AVATAR_VIEW" />

    <ImageView
        android:id="@+id/ID_MAIN_AVATAR_VIEW"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="131dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@android:drawable/btn_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>