<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.password_reset.ChangePasswordActivity">

    <EditText
        android:id="@+id/ID_NEW_PASSWORD"
        style="@style/editTextField"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:hint="@string/hintNewPass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_OLD_PASSWORD" />

    <EditText
        android:id="@+id/ID_NEW_PASSWORD_AGAIN"
        style="@style/editTextField"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/hintConfPass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/ID_VERIFY_PASSWORD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_NEW_PASSWORD" />

    <EditText
        android:id="@+id/ID_OLD_PASSWORD"
        style="@style/editTextField"
        android:layout_marginStart="66dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:hint="@string/hintOldPass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/ID_NOTE_2"
        style="@style/textFieldGreen"
        android:layout_marginStart="85dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="85dp"
        android:text="Podaj stare hasło w celu weryfikacji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_VERIFY_PASSWORD" />

    <Button
        android:id="@+id/ID_VERIFY_PASSWORD"
        style="@style/buttonGreen"
        android:layout_marginStart="116dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="116dp"
        android:text="DALEJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ID_NEW_PASSWORD_AGAIN" />

    <TextView
        style="@style/headerBackgroundGreen"
        android:id="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogoutPassword"
        style="@style/buttonGreen"
        android:layout_marginStart="161dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="161dp"
        android:text="Wyloguj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>